--- a/ckanext/showcase/templates/showcase/search.html
+++ b/ckanext/showcase/templates/showcase/search.html
@@ -28,11 +28,11 @@
     'remove_field': h.facet_remove_field }
   %}
   {% set sorting = [
+    (_('Popular'), 'views_recent desc') if g.tracking_enabled else (false, false),
     (_('Relevance'), 'score desc, metadata_modified desc'),
     (_('Name Ascending'), 'title_string asc'),
     (_('Name Descending'), 'title_string desc'),
-    (_('Last Modified'), 'metadata_modified desc'),
-    (_('Popular'), 'views_recent desc') if g.tracking_enabled else (false, false) ]
+    (_('Last Modified'), 'metadata_modified desc')]
   %}
   {% snippet 'showcase/snippets/showcase_search_form.html', type='showcase', placeholder=_('Search showcases...'), query=c.q, sorting=sorting, sorting_selected=c.sort_by_selected, count=c.page.item_count, facets=facets, show_empty=request.params, error=c.query_error, fields=c.fields, no_bottom_border=true %}
 {% endblock %}
