--- a/ckanext/showcase/templates/showcase/snippets/showcase_item.html
+++ b/ckanext/showcase/templates/showcase/snippets/showcase_item.html
@@ -11,47 +11,59 @@ show_remove    - If True, show the remove button to remove showcase/dataset asso
 {% set truncate = truncate or 180 %}
 {% set truncate_title = truncate_title or 80 %}
 {% set title = package.title or package.name %}
-{% set notes = h.markdown_extract(package.notes, extract_length=truncate) %}
-
-{% set ckan_29_or_higher = h.ckan_version().split('.')[1] | int >= 9 %}
-
-{% set showcase_read_route = 'showcase_blueprint.read' if ckan_29_or_higher else 'showcase_read' %}
+{% set notes = h.markdown_extract(package.notes, extract_length=700) %}
 
 {% block package_item %}
-
-<li class="media-item">
   {% block item_inner %}
-    {% block image %}
-      <img src="{{ package.image_display_url or h.url_for_static('/base/images/placeholder-group.png') }}" alt="{{ package.name }}" class="media-image img-responsive">
+    <div class="showcase-wrapper row">
+        <div class="col-sm-2 col-md-2 col-lg-2">
+            {% block image %}
+                <a href = "{{h.url_for(controller='ckanext.showcase.controller:ShowcaseController', action='read', id=package.name)}}">
+                <img 
+                    src="{{ package.image_display_url or h.url_for_static('/base/images/placeholder-group.png') }}" 
+                    alt="{{ package.name }}" 
+                    class="showcase-image img-thumbnail img-fluid">
+                </a>
+            {% endblock %}
+        </div>
+        <div class="col-sm-10 col-md-10 col-lg-10">
+            <div class="showcase-description">
+                    {% block title %}
+                        <h3 class="media-heading">{{ h.link_to(h.truncate(title, truncate_title), h.url_for(controller='ckanext.showcase.controller:ShowcaseController', action='read', id=package.name)) }}</h3>
+                    {% endblock %}
+                    {% block datasets %}
+                    {% if package.num_datasets %}
+                        <strong class="count">{{ ungettext('{num} Dataset', '{num} Datasets', package.num_datasets).format(num=package.num_datasets) }}</strong>
+                    {% elif package.num_datasets == 0 %}
+                        <span class="count">{{ _('0 Datasets') }}</span>
+                    {% endif %}
+                    {% endblock %} 
+            </div>
+            <div class="showcase-notes hidden-sm hidden-xs">
+                    {% block notes %}
+                    {% if notes %}
+                        <div>{{ notes|urlize }}</div>
+                    {% else %}
+                        <p class="empty">{{ _("This showcase has no description") }}</p>
+                    {% endif %}
+                    {% endblock %}
+            </div>
+        </div>
+    </div>
     {% endblock %}
-    {% block title %}
-      <h3 class="media-heading">{{ h.link_to(h.truncate(title, truncate_title), h.url_for(showcase_read_route, id=package.name)) }}</h3>
-    {% endblock %}
-    {% block notes %}
-      {% if notes %}
-        <div>{{ notes|urlize }}</div>
-      {% else %}
-        <p class="empty">{{ _("This showcase has no description") }}</p>
-      {% endif %}
-    {% endblock %}
-    {% block datasets %}
-      {% if package.num_datasets %}
-        <strong class="count">{{ ungettext('{num} Dataset', '{num} Datasets', package.num_datasets).format(num=package.num_datasets) }}</strong>
-      {% elif package.num_datasets == 0 %}
-        <span class="count">{{ _('0 Datasets') }}</span>
-      {% endif %}
-    {% endblock %}
-    {% block link %}
-      <a href="{{ h.url_for(showcase_read_route, id=package.name) }}" title="{{ _('View {showcase_title}').format(showcase_title=package.title) }}" class="media-view">
-        <span>{{ _('View {showcase_title}').format(showcase_title=package.title) }}</span>
-      </a>
-    {% endblock %}
-    {% if show_remove %}
-      <form method="post"><input type="hidden" value="{{ package.id }}" name="remove_showcase_id" /><input value="{{ _('Remove') }}" type="submit" class="btn btn-danger btn-small media-edit" title="{{ _('Remove dataset from this showcase') }}"/></form>
-    {% endif %}
-  {% endblock %}
-</li>
 {% endblock %}
+{#
+    <li class="media-item">
+        {% block link %}
+        <a href="{{ h.url_for(controller='ckanext.showcase.controller:ShowcaseController', action='read', id=package.name) }}" title="{{ _('View {showcase_title}').format(showcase_title=package.title) }}" class="media-view">
+            <span>{{ _('View {showcase_title}').format(showcase_title=package.title) }}</span>
+        </a>
+        {% endblock %}
+        {% if show_remove %}
+        <form method="post"><input type="hidden" value="{{ package.id }}" name="remove_showcase_id" /><input value="{{ _('Remove') }}" type="submit" class="btn btn-danger btn-small media-edit" title="{{ _('Remove dataset from this showcase') }}"/></form>
+        {% endif %}
+    </li>
+#}
 {# {% if position is divisibleby 3 %}
   <li class="clearfix js-hide"></li>
 {% endif %} #}
