--- a/ckanext/showcase/templates/showcase/snippets/showcase_list.html
+++ b/ckanext/showcase/templates/showcase/snippets/showcase_list.html
@@ -11,12 +11,13 @@ show_remove    - If True, show the remove button to remove the showcase/dataset 
 #}
 {% block package_list %}
   {% if packages %}
-    <ul class="media-grid" data-module="media-grid">
+    <div class="showcase-list-holder">
         {% block package_list_inner %}
           {% for package in packages %}
             {% snippet 'showcase/snippets/showcase_item.html', package=package, item_class=item_class, truncate=truncate, truncate_title=truncate_title, show_remove=show_remove %}
+            <hr>
           {% endfor %}
         {% endblock %}
-    </ul>
+    </div>
   {% endif %}
 {% endblock %}
