--- a/ckanext/showcase/templates/showcase/snippets/showcase_search_result_text.html
+++ b/ckanext/showcase/templates/showcase/snippets/showcase_search_result_text.html
@@ -6,7 +6,7 @@ Based on snippets/search_result_text.html
 {% if type == 'showcase' %}
   {% set text_query = ungettext("{number} showcase found for '{query}'", "{number} showcases found for '{query}'", count) %}
   {% set text_query_none = _("No showcases found for '{query}'") %}
-  {% set text_no_query = ungettext("{number} showcase found", "{number} showcases found", count) %}
+  {% set text_no_query = ungettext("{number} showcase", "{number} showcases", count) %}
   {% set text_no_query_none = _("No showcases found") %}
 {%- endif -%}
 
