Removed sidebar (not complete) from showcase list page

--- a/ckanext/showcase/templates/showcase/search.html
+++ b/ckanext/showcase/templates/showcase/search.html
@@ -1,4 +1,4 @@
-{% extends "package/search.html" %}
+{% extends "package/search_primary.html" %}
 {% import 'macros/form.html' as form %}
 {% set ckan_29_or_higher = h.ckan_version().split('.')[1] | int >= 9 %}
 {% set showcase_index_route = 'showcase_blueprint.index' if ckan_29_or_higher else 'showcase_index' %}
@@ -45,13 +45,4 @@
 {% endblock %}
 
 {% block secondary_content %}
-{{ h.snippet('showcase/snippets/helper.html') }}
-<div class="filters">
-  <div>
-    {% for facet in c.facet_titles %}
-      {{ h.snippet('snippets/facet_list.html', title=c.facet_titles[facet], name=facet) }}
-    {% endfor %}
-  </div>
-  <a class="close no-text hide-filters"><i class="fa fa-times-circle icon-remove-sign"></i><span class="text">close</span></a>
-</div>
 {% endblock %}
