--- a/ckanext/showcase/templates/page_primary.html
+++ b/ckanext/showcase/templates/page_primary.html
@@ -17,7 +17,7 @@
 
   {# The content block allows you to replace the content of the page if needed #}
   {%- block content %}
-    {% block maintag %}<div role="main">{% endblock %}
+    {% block maintag %}<div role="main" style = "background-color: #e8e8e8; padding-top: 10px;">{% endblock %}
       <div id="content" class="container">
         {% block main_content %}
           {% block flash %}
@@ -54,7 +54,7 @@
             {% endblock %}
 
             {% block secondary %}
-              <aside class="secondary col-sm-0">
+              {# <aside class="secondary col-sm-0"> #}
                 {#
                 The secondary_content block can be used to add content to the
                 sidebar of the page. This is the main block that is likely to be
@@ -67,8 +67,8 @@
                     <p>Some content for the item</p>
                   {% endblock %}
                 #}
-                {% block secondary_content %}{% endblock %}
-              </aside>
+                {#{% block secondary_content %}{% endblock %}
+              </aside>#}
             {% endblock %}
 
             {% block primary %}
