All shhowcase list page => logged out icon added => for sharing your story

--- a/ckanext/showcase/templates/showcase/search.html
+++ b/ckanext/showcase/templates/showcase/search.html
@@ -16,6 +16,15 @@
     <div class="page_primary_action">
       {% link_for _('Add Showcase'), named_route=showcase_new_route, class_='btn btn-primary', icon='plus-square' %}
     </div>
+    {% else %}
+        <div style="display: flex; align-content: space-around; justify-content: space-between;">
+      <div> <p style = "font-size: 19px;"> Showcased Data Stories and Applications using Open Data Pakistan </p> </div>
+        <div>
+            <a style="margin-bottom : 15px" class="btn btn-primary" href="/contact" target="_blank">
+                <i class="fab fa-slideshare"></i> Share Data Story
+            </a>
+        </div>
+      </div>
   {% endif %}
 {% endblock %}
 
